<resources>
    <string name="app_name">Draw Messenger</string>
    <string name="clear">Clear</string>
    <string name="redraw">Redraw</string>
    <string name="clear_frames">Clear frames</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="received_code">Received code</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="verification_code">Verification Code</string>
    <string name="text">DrawMessenger will send an SMS message to verify your phone number. Enter your country code and phone number: </string>
    <string name="default_notification_channel_id">draw_messenger_channel_id</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="undo">Undo</string>
    <string name="record">Record</string>
    <string name="color">Color</string>
    <string name="grid">Grid</string>
    <string name="contacts">Contacts</string>
    <string name="online_users">Online Users</string>
    <string name="history">History</string>
    <string name="sign_out">Sign out</string>
    <string name="user_photo">user_photo</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="cache_draw_records">Cache draw-records</string>
    <string name="name">name...</string>

</resources>
